--- a/PetStoreUI/Pages/Index.cshtml
+++ b/PetStoreUI/Pages/Index.cshtml
@@ -1,10 +1,9 @@
-﻿@page
-@model IndexModel
-@{
-    ViewData["Title"] = "Home page";
-}
+﻿@inject PetStoreService PetService
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Pet Store</h1>
+<ul>
+    @foreach (var pet in await PetService.GetAllPetsAsync())
+    {
+        <li>@pet.ProductId - @pet.PetDescription - @pet.Price</li>
+    }
+</ul>
