--- a/PetStoreUI/Views/Shared/_Layout.cshtml
+++ b/PetStoreUI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using PetStoreAPI.Data
+@using PetStoreAPI.Entities
+@inject PetStoreDbContext DbContext
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,35 +10,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Pet Store</title>
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/homeCategoryStyle.css" />
-    <link rel="stylesheet" href="~/css/homeFeatureStyle.css" />
 </head>
 
 <body>
-    <header>
+    @{
+        var user = DbContext.Users.FirstOrDefault(u => u.Id == 1);
+        var userName = user?.Username;
+    }
+    <header class="header">
         <div class="header-title">Pet Store</div>
-        <nav class="navbar">
+    </header>
+    <nav class="navbar">
+        <div class="nav-left">
+            <div class="welcome-message">Welcome, <strong>@userName</strong>, to the store!</div>
+        </div>
+        <div class="nav-center">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link @(ViewData["ActivePage"]?.ToString() == "Home" ? "active" : "")"
-                        href="/">Home</a>
+                    <a class="nav-link" href="/">Cat</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link @(ViewData["ActivePage"]?.ToString() == "Privacy" ? "active" : "")"
-                        href="/Home/Privacy">Privacy</a>
+                    <a class="nav-link" href="/">Dog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link @(ViewData["ActivePage"]?.ToString() == "Help" ? "active" : "")"
-                        href="/Home/Help">Help</a>
+                    <a class="nav-link" href="/">Insects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Fish</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Bird</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Other</a>
                 </li>
             </ul>
-            <div class="nav-right">
-                <a href="/Cart">
-                    <img src="~/images/cart-icon.png" alt="Cart" />
-                </a>
-            </div>
-        </nav>
-    </header>
+        </div>
+        <div class="nav-right">
+            <a href="/Account/Register">Register</a>
+            <a href="/Home/Help">Help</a>
+            <a href="/Cart">
+                <img src="~/images/cart-icon.png" alt="Cart" />
+            </a>
+        </div>
+    </nav>
     <main role="main" class="container">
         @RenderBody()
     </main>
