--- a/PetStoreUI/Views/Home/Index.cshtml
+++ b/PetStoreUI/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
+@using PetStoreLibrary.DTOs
+@using PetStoreUI.Models
 @model PetStoreUI.Models.PetStoreViewModel
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<p>Your one-stop shop for all your pet needs.</p>
