--- a/PetStoreUI/Views/Shared/_Layout.cshtml
+++ b/PetStoreUI/Views/Shared/_Layout.cshtml
@@ -27,22 +27,22 @@
         <div class="nav-center">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Cat</a>
+                    <a class="nav-link" href="/Home/Index?categoryName=Cat">Cat</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Dog</a>
+                    <a class="nav-link" href="/Home/Index?categoryName=Dog">Dog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Insects</a>
+                    <a class="nav-link" href="/Home/Index?categoryName=Insects">Insects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Fish</a>
+                    <a class="nav-link" href="/Home/Index?categoryName=Fish">Fish</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Bird</a>
+                    <a class="nav-link" href="/Home/Index?categoryName=Bird">Bird</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Other</a>
+                    <a class="nav-link" href="/Home/Index?categoryName=Other">Other</a>
                 </li>
             </ul>
         </div>
@@ -50,7 +50,7 @@
             <a href="/Account/Register">Register</a>
             <a href="/Home/Help">Help</a>
             <a href="/Cart">
-                <img src="~/images/cart-icon.png" alt="Cart" />
+                <img src="~/images/cart-icon.png" alt="Cart" class="cart-icon" />
             </a>
         </div>
     </nav>
