--- a/PetStoreUI/Views/Home/Index.cshtml
+++ b/PetStoreUI/Views/Home/Index.cshtml
@@ -1,7 +1,5 @@
 ﻿@page
-@using PetStoreLibrary.DTOs
-@using PetStoreUI.Models
-@model PetStoreUI.Models.PetStoreViewModel
+@using PetStoreAPI.Endpoints
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
