--- a/PetStoreUI/Views/Shared/_Layout.cshtml
+++ b/PetStoreUI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PetStoreAPI.Data
+@using Microsoft.EntityFrameworkCore
 @using PetStoreAPI.Entities
 @inject PetStoreDbContext DbContext
 
@@ -16,6 +17,7 @@
     @{
         var user = DbContext.Users.FirstOrDefault(u => u.Id == 1);
         var userName = user?.Username;
+        var categories = DbContext.Categories.ToList();
     }
     <header class="header">
         <div class="header-title">Pet Store</div>
@@ -26,24 +28,12 @@
         </div>
         <div class="nav-center">
             <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/Home/Index?categoryName=Cat">Cat</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Home/Index?categoryName=Dog">Dog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Home/Index?categoryName=Insects">Insects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Home/Index?categoryName=Fish">Fish</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Home/Index?categoryName=Bird">Bird</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Home/Index?categoryName=Other">Other</a>
-                </li>
+                @foreach (var category in categories)
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Home/Index?categoryName=@category.Name">@category.Name</a>
+                    </li>
+                }
             </ul>
         </div>
         <div class="nav-right">
