--- a/PetStoreUI/wwwroot/css/site.css
+++ b/PetStoreUI/wwwroot/css/site.css
@@ -152,11 +152,23 @@ footer {
 
 /* Styles for individual tables */
 .table {
-  width: 45%; /* Adjust table width */
-  margin-top: 20px; /* Margin for spacing */
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.table th, .table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.table th {
+  background-color: #f2f2f2;
+  text-align: left;
 }
 
 .cart-icon {
     width: 24px;
     height: 24px;
+    color: blue;
 }
