--- a/PetStoreUI/Views/Home/Index.cshtml
+++ b/PetStoreUI/Views/Home/Index.cshtml
@@ -1,7 +1,5 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-
-    // Lấy danh sách petStores từ ViewBag
     var petStores = ViewBag.PetStores as List<PetStoreLibrary.DTOs.PetStoreDTO>;
 }
 
@@ -12,21 +10,24 @@
             @for (int i = 0; i < petStores.Count; i += 3)
             {
                 <tr>
-                    @for (int j = i; j < i + 3 && j < petStores.Count; j++)
+                    @for (int j = i; j < i + 3; j++)
                     {
-                        <td>
-                            <img src="@petStores[j].ImageUrl" alt="Pet Image" class="pet-image" /><br />
-                            <strong>Pet Name:</strong> @petStores[j].PetName<br />
-                            <strong>Category:</strong> @petStores[j].CategoryName<br />
-                            <strong>Gender:</strong> @petStores[j].Gender<br />
-                            <strong>Description:</strong> @petStores[j].PetDescription<br />
-                            <strong>Price:</strong> @petStores[j].Price<br />
-                            <strong>Birth Day:</strong> @petStores[j].BirthDay.ToShortDateString()<br />
-                        </td>
-                    }
-                    @for (int k = (i + 3) - petStores.Count; k > 0 && k < 3; k++)
-                    {
-                        <td></td>
+                        if (j < petStores.Count)
+                        {
+                            <td>
+                                <img src="@Url.Content("~/" + petStores[j].ImageUrl)" alt="Pet Image" class="pet-image"/><br />
+                                <strong>Pet Name:</strong> @petStores[j].PetName<br />
+                                <strong>Category:</strong> @petStores[j].CategoryName<br />
+                                <strong>Gender:</strong> @petStores[j].Gender<br />
+                                <strong>Description:</strong> @petStores[j].PetDescription<br />
+                                <strong>Price:</strong> @petStores[j].Price<br />
+                                <strong>Birth Day:</strong> @petStores[j].BirthDay.ToShortDateString()<br />
+                            </td>
+                        }
+                        else
+                        {
+                            <td></td>
+                        }
                     }
                 </tr>
             }
