--- a/PetStoreUI/Views/Shared/_Layout.cshtml
+++ b/PetStoreUI/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
         </div>
         <div class="nav-right">
             <a href="/Account/Register">Register</a>
-            <a href="/Home/Help">Help</a>
+            <a href="/Help">Help</a>
             <a href="/Cart">
                 <img src="@Url.Content("~/images/cart-icon.png")" alt="Cart" class="cart-icon" />
             </a>
