update - login , logout  success

--- a/PetStoreUI/Pages/Help.cshtml
+++ b/PetStoreUI/Pages/Help.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+@page
+@model PetStoreUI.Pages.HelpModel
+@{
     ViewData["Title"] = "Help";
 }
 
@@ -30,8 +32,5 @@
 </ul>
 <p><strong>Contact:</strong></p>
 <ul>
-
-        <p>If you encounter any issues or have questions, please refer to the FAQ section or contact our support team at <a href="mailto:support@petstore.com">support@petstore.com</a>.</p>
-    
-
+    <p>If you encounter any issues or have questions, please refer to the FAQ section or contact our support team at <a href="mailto:support@petstore.com">support@petstore.com</a>.</p>
 </ul>
