--- a/PetStoreUI/Pages/Cart/Cart.cshtml
+++ b/PetStoreUI/Pages/Cart/Cart.cshtml
@@ -7,3 +7,19 @@
 
 <h2>Shopping Cart</h2>
 <p>This is your shopping cart.</p>
+
+@if (Model.CartItems.Any())
+{
+    <ul>
+        @foreach (var item in Model.CartItems)
+        {
+            <li>
+                Pet ID: @item.PetId, Quantity: @item.Quantity
+            </li>
+        }
+    </ul>
+}
+else
+{
+    <p>Your cart is empty.</p>
+}
